# cel-risk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  validate_downsample.py
analysis/: SETUP_README.md  pyproject.toml
analysis/.serena/: project.yml
analysis/analysis/tests/: test_aggregate_splits_discovery.py
analysis/configs/: README.md  aggregate_config.yaml  consensus_panel.yaml  holdout_config.yaml  manifest.yaml  optimize_panel.yaml  output_config.yaml  permutation_test.yaml  pipeline_hpc.yaml  pipeline_hpc_phase2.yaml  pipeline_hpc_val_consensus.yaml  pipeline_local.yaml  splits_config.yaml  training_config.yaml  training_config_local.yaml  training_config_val_4protein.yaml  training_config_val_consensus.yaml
analysis/configs/_archive/: pipeline_hpc_phase2.yaml
analysis/configs/sweep_panels/: training_sweep_10p.yaml  training_sweep_11p.yaml  training_sweep_12p.yaml  training_sweep_13p.yaml  training_sweep_14p.yaml  training_sweep_15p.yaml  training_sweep_16p.yaml  training_sweep_17p.yaml  training_sweep_18p.yaml  training_sweep_19p.yaml  training_sweep_20p.yaml  training_sweep_21p.yaml  training_sweep_22p.yaml  training_sweep_23p.yaml  training_sweep_24p.yaml  training_sweep_25p.yaml  training_sweep_5p.yaml  training_sweep_6p.yaml  training_sweep_8p.yaml  training_sweep_9p.yaml
analysis/docs/: ARCHITECTURE.md  ARTIFACTS.md
analysis/docs/adr/: ADR-001-split-strategy.md  ADR-002-prevalent-train-only.md  ADR-003-control-downsampling.md  ADR-004-four-strategy-feature-selection.md  ADR-004-hybrid-feature-selection.md  ADR-005-nested-cv.md  ADR-005-stability-panel.md  ADR-006-nested-cv.md  ADR-006-optuna-hyperparameter-optimization.md  ADR-007-auroc-optimization.md  ADR-007-oof-stacking-ensemble.md  ADR-008-optuna-hyperparameter-optimization.md  ADR-009-oof-stacking-ensemble.md  ADR-009-threshold-on-val.md  ADR-010-fixed-spec.md  ADR-010-prevalence-adjustment.md  ADR-011-permutation-testing.md  ADR-011-threshold-on-val.md  ADR-012-fixed-spec-95.md  ADR-012-fixed-spec.md  ADR-013-four-strategy-feature-selection.md  ADR-014-oof-posthoc-calibration.md  ADR-015-model-selection-scoring.md  ADR-016-permutation-testing.md
analysis/docs/development/: CALIBRATION_IMPROVEMENTS.md  CODE_REVIEW_CAMPAIGN.md  Chowell.md  DEFERRED_ISSUES.md  EMPIRICAL_VALIDATION_STATUS.md  FIX_OOF_CLUSTERING_LEAKAGE.md  IMPLEMENTATION_OPPORTUNITIES.md  MATHEMATICAL_VALIDITY_AUDIT.md  MATHEMATICAL_VALIDITY_AUDIT_PLAN.md  MULTIMODEL_ESSENTIALITY.md  OOF_IMPORTANCE_PERSISTENCE_FIX.md  OPPORTUNITIES.md  OPTIMAL_PANEL_SELECTION.md  P1_FIXES_V06_V07.md  PIPELINE_CORRECTNESS_AUDIT_AND_PLAN.md  SHAP_IMPLEMENTATION_PLAN.md  SHAP_IMPLEMENTATION_SUMMARY.md  V14_ESSENTIALITY_SIGNAL_FIX.md
analysis/docs/investigations/: FACTORIAL_CELL_TUNING.md  README_FACTORIAL.md  analyze_factorial_2x2x2.py  generate_factorial_configs.py  (+7 more)
analysis/experiments/: rra_universe_sensitivity.py
analysis/scripts/: eval_ensemble_holdout.py  hpc_activate.sh  hpc_debug_collect_context.sh  hpc_debug_replay_training_job.sh  hpc_setup.sh  load_modules.sh  plot_optuna_trials.R  run_incident_validation.py  submit_holdout_eval.sh  submit_incident_validation.sh  submit_incident_validation_parallel.sh  submit_phase2_permutation.sh
analysis/tests/: E2E_RUNNER_GUIDE.md  E2E_TESTING_GUIDE.md  E2E_TEST_INVENTORY.md  E2E_TEST_STATUS.md  E2E_TEST_SUMMARY.md  conftest.py  test_data_splits.py  test_e2e_calibration_workflows.py  test_e2e_fixed_panel_workflows.py  test_e2e_multi_model_workflows.py  test_e2e_output_structure.py  test_e2e_run_id_workflows.py  test_e2e_runner.py  test_e2e_temporal_workflows.py  test_features_kbest.py  test_metadata_categories.py  test_metrics_discrimination.py  test_metrics_thresholds.py  test_models_calibration.py  test_models_stacking.py  test_plotting_ensemble.py  test_plotting_risk_dist.py  test_screening.py  test_training.py  test_utils_feature_names.py
(+1143 files in other folders)
