[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ced-ml"
version = "1.0.0"
description = "Machine learning pipeline for incident Celiac Disease risk prediction from proteomics"

requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andres Chousal", email = "andres.chousal@example.com"},
]
keywords = ["celiac", "machine-learning", "proteomics", "biomarkers", "risk-prediction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.0.0",
    "optuna>=4.0.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
    "joblib>=1.4.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.13.0",
    "mypy>=1.11.0",
]

[project.scripts]
ced = "ced_ml.cli.main:cli"

[project.urls]
Homepage = "https://github.com/elahi-lab/CeliacRiskML"
Documentation = "https://github.com/elahi-lab/CeliacRiskML/blob/main/README.md"
Repository = "https://github.com/elahi-lab/CeliacRiskML"

[tool.setuptools]
readme = {file = "../README.md"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ced_ml = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ced_ml",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (run manually with -m slow)",
]
